abort search with error if the base dir is not there

BUG: 489581